# asset_market_place_nodejs_app/config/swagger.json
@@ -152,6 +152,153 @@
                 "parameters": [],
                 "operationId": "getGetAssets"
             }
+        },
+        "/getAssetFiles": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success response",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "default": "Simple Page layout Template 1"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "default": "Simple Page layout Template 1"
+                                    },
+                                    "icon": {
+                                        "type": "string",
+                                        "default": "layout1.png"
+                                    },
+                                    "category": {
+                                        "type": "string",
+                                        "default": "Template"
+                                    },
+                                    "subcategory": {
+                                        "type": "string",
+                                        "default": ""
+                                    },
+                                    "tags": {
+                                        "type": "array",
+                                        "items": {}
+                                    },
+                                    "date": {
+                                        "type": "string",
+                                        "default": "10/10/2017"
+                                    },
+                                    "author": {
+                                        "type": "string",
+                                        "default": "NamOs"
+                                    },
+                                    "version": {
+                                        "type": "string",
+                                        "default": "1.0"
+                                    },
+                                    "imageDesc": {
+                                        "type": "string",
+                                        "default": "layout1.png"
+                                    },
+                                    "implementationType": {
+                                        "type": "string",
+                                        "default": "PYTHON"
+                                    },
+                                    "like": {
+                                        "type": "integer",
+                                        "default": 1
+                                    },
+                                    "implementationFile": {
+                                        "type": "string",
+                                        "default": "http://localhost:8888/spotfireFramework/customLibs/ironPythonLib/templateLayout1.py"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [],
+                "operationId": "getGetAssetFiles"
+            }
+        },"/getAssetFile": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success response",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "default": "Simple Page layout Template 1"
+                                    },
+                                    "description": {
+                                        "type": "string",
+                                        "default": "Simple Page layout Template 1"
+                                    },
+                                    "icon": {
+                                        "type": "string",
+                                        "default": "layout1.png"
+                                    },
+                                    "category": {
+                                        "type": "string",
+                                        "default": "Template"
+                                    },
+                                    "subcategory": {
+                                        "type": "string",
+                                        "default": ""
+                                    },
+                                    "tags": {
+                                        "type": "array",
+                                        "items": {}
+                                    },
+                                    "date": {
+                                        "type": "string",
+                                        "default": "10/10/2017"
+                                    },
+                                    "author": {
+                                        "type": "string",
+                                        "default": "NamOs"
+                                    },
+                                    "version": {
+                                        "type": "string",
+                                        "default": "1.0"
+                                    },
+                                    "imageDesc": {
+                                        "type": "string",
+                                        "default": "layout1.png"
+                                    },
+                                    "implementationType": {
+                                        "type": "string",
+                                        "default": "PYTHON"
+                                    },
+                                    "like": {
+                                        "type": "integer",
+                                        "default": 1
+                                    },
+                                    "implementationFile": {
+                                        "type": "string",
+                                        "default": "http://localhost:8888/spotfireFramework/customLibs/ironPythonLib/templateLayout1.py"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "parameters": [],
+                "operationId": "getGetAssetFile"
+            }
         }
     },
     "definitions": {
